2000-12-07  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* getaddrinfo.c (getaddrinfo): fix mapping of HOST_NOT_FOUND
	error.
	(gai_strerror): fix capitalization of error strings.

	* getaddrinfo.c (getaddrinfo): fix bug (ai allocation at wrong
	time) found by OSF/1 cc.

	* ftp.c (ftp_cat): disable transfer rate display (since it is
	unreliable).

	* util.c (parse_url): recognize literal IPv6 addresses (RFC 2732).
	
	* fntable.fn, mkfntab-c.m4, mkfntab-h.m4, mkfntexi.m4,
	mkoptab-c.m4, mkoptab-h.m4, mkoptexi.m4, options.op: change quotes
	to << and >>.

	* configure.in: include comment in AC_DEFINE, obsoleting
	acconfig.h.
	don't check for hstrerror.

	* getaddrinfo.c: move replacement h_errno declarartion from
	sockets.c here.
	(getaddrinfo): map h_errno values to return values.

2000-12-06  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* getaddrinfo.c (getaddrinfo): avoid host name lookup for raw ip
	addresses, use inet_aton.

	* sockets.c (sockaddr_ntop): omit scope id.
	
	* main.c (main): initialize ftp_host et al before getting initial
	directory.
	
	* ftp.c, mkbind.c, readdir.c, sockets.c, status.c, tag.c, tty.c:
	code cleanup for -Wall.
	
	* mkfntab-h.m4: emit correct prototypes for bindable functions.
	
	* functions.h: move aux_* prototypes from fn_select here
	(aux_download used in main.c)
	
	* util.h: fix function name in prototype.
	* getaddrinfo.c (getaddrinfo): don't free airet before it is
	initialized.
	* ftp.c (ftp_port): fix endianness bug.

2000-12-05  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* sockets.c (sockaddr_ntop): work around mising sa_len.
	* configure.in: check for member sa_len of struct sockaddr.
	* acinclude.m4 (NIH_HAVE_STRUCT_MEMBER): generic check for a
	member of a struct.

	* ftp.c (ftp_port): support for inet6.
	(ftp_addr, ftp_gethostaddr): store address in struct
	sockaddr_storage for protocol independence.

	* sockets.c (sopen): new version with inet6 support.
	(spassive): new version with inet6 support.