@@ -1,3 +1,15 @@
+2000-12-10  Dieter Baron  <dillo@danbala.tuwien.ac.at>
+
+	* fn_select.c, fn_tag.c, ftp.c, tag.c: sort headers, include
+	<libgen.h> or prototype for basename.
+	* configure.in: check for <libgen.h>.
+
+	* basename.c (basename): conform to XPG4.2.
+
+2000-12-09  Dieter Baron  <dillo@danbala.tuwien.ac.at>
+
+	* configure.in: stepped version to 0.10.
+
 2000-12-07  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
 	* getaddrinfo.c (getaddrinfo): fix mapping of HOST_NOT_FOUND
